// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PercentageCard /> should style values correctly 1`] = `
<span
  class="styles__Percentage-sc-5s1rht-2 kASbqQ"
>
  0
  %
</span>
`;

exports[`<PercentageCard /> should style values correctly 2`] = `
<span
  class="styles__Percentage-sc-5s1rht-2 hxmePE"
>
  50
  %
</span>
`;

exports[`<PercentageCard /> should style values correctly 3`] = `
<span
  class="styles__Percentage-sc-5s1rht-2 hxmePE"
>
  100
  %
</span>
`;

exports[`<PercentageCard /> should style values correctly 4`] = `
<span
  class="styles__Percentage-sc-5s1rht-2 hxmePE"
>
  1000
  %
</span>
`;

exports[`<PercentageCard /> should style values correctly 5`] = `
<span
  class="styles__Percentage-sc-5s1rht-2 kASbqQ"
>
  0.1
  %
</span>
`;

exports[`<PercentageCard /> should style values correctly 6`] = `
<span
  class="styles__Percentage-sc-5s1rht-2 kASbqQ"
>
  49.9999
  %
</span>
`;
